refatorando atualizarCardapio